# CS50x-2026

./: .gitignore  CMakeLists.txt  Lecture 0 Notes  README.md
Week 1 - C/: Lecture 1 Notes  agree.c  calculator.c  cat.c  compare.c  hello.c  mario  mario.c
